Update test cases to fit multi-core